python/cffi/cdef/cdef_air.h

/*
******** airEnum struct
**
** The airEnum provides the basic mechanism of mapping from a
** string to an int enum value, and back.
*/
typedef struct {
  const char *name;
  /* what are these things? */
  unsigned int M;
  /* str[0]: string for the unknown/invalid value;
     str[1] .. str[M]: canonical strings for the enum values;
     "val"     NULL: unknown/invalid = 0;
                     valid values are 1 .. M
     "val" non-NULL: unknown/invalid = val[0];
                     valid are val[1].. val[M]
  */
  const char **str; /* see above */
  const int *val;   /* see above */
  const char **desc;
  /* desc[i] is a short description of the enum values represented by
     str[i] (thereby starting with the unknown value), to be used to
     by things like hest */
  const char **strEqv;
  /* If non-NULL, all the variations in strings recognized in mapping
     from string to value (the values in valEqv).  This **MUST** be
     terminated by a zero-length string ("") so as to signify the end
     of the list.  This should *not* contain the string for
     unknown/invalid.  If "strEqv" is NULL, then mapping from string
     to value is done only by traversing "str", and "valEqv" is
     ignored. */
  const int *valEqv;
  /* If strEqv non-NULL, valEqv holds the values corresponding to the
     strings in strEqv, with one integer for each non-zero-length
     string in strEqv: strEqv[i] is a valid string representation for
     value valEqv[i]. This should *not* contain the value for
     unknown/invalid.  This "valEqv" is ignored if "strEqv" is
     NULL. */
  int sense; /* require case matching on strings */
} airEnum;