src/ell/ell.h

ELL_EXPORT const char *ell_biff_key;
ELL_EXPORT const airEnum *const ell_cubic_root;
ELL_EXPORT int ell_debug;
ELL_EXPORT void ell_3m_print_f(FILE *f, const float s[9]);
ELL_EXPORT void ell_3v_print_f(FILE *f, const float s[3]);
ELL_EXPORT void ell_3m_print_d(FILE *f, const double s[9]);
ELL_EXPORT void ell_3v_print_d(FILE *f, const double s[3]);
ELL_EXPORT void ell_4m_print_f(FILE *f, const float s[16]);
ELL_EXPORT void ell_4v_print_f(FILE *f, const float s[4]);
ELL_EXPORT void ell_4m_print_d(FILE *f, const double s[16]);
ELL_EXPORT void ell_4v_print_d(FILE *f, const double s[4]);
ELL_EXPORT void ell_3v_perp_f(float p[3], const float v[3]);
ELL_EXPORT void ell_3v_perp_d(double p[3], const double v[3]);
ELL_EXPORT void ell_3mv_mul_f(float v2[3], const float m[9], const float v1[3]);
ELL_EXPORT void ell_3mv_mul_d(double v2[3], const double m[9], const double v1[3]);
ELL_EXPORT void ell_4mv_mul_f(float v2[4], const float m[16], const float v1[4]);
ELL_EXPORT void ell_4mv_mul_d(double v2[4], const double m[16], const double v1[4]);
ELL_EXPORT float ell_3v_angle_f(const float u[3], const float v[3]);
ELL_EXPORT double ell_3v_angle_d(const double u[3], const double v[3]);
ELL_EXPORT double ell_3v_area_spherical_d(const double avec[3],
                                          const double bvec[3],
                                          const double cvec[3]);
ELL_EXPORT void ell_3v_barycentric_spherical_d(double bary[3],
                                               const double av[3],
                                               const double bv[3],
                                               const double cv[3],
                                               const double vv[3]);
/* mat.c */
ELL_EXPORT void ell_3m_mul_f(float m3[9], const float m1[9], const float m2[9]);
ELL_EXPORT void ell_3m_mul_d(double m3[9], const double m1[9], const double m2[9]);
/*                                     A = A * B */
ELL_EXPORT void ell_3m_pre_mul_f(float A[9], const float B[9]);
ELL_EXPORT void ell_3m_pre_mul_d(double A[9], const double B[9]);
/*                                      A = B * A */
ELL_EXPORT void ell_3m_post_mul_f(float A[9], const float B[9]);
ELL_EXPORT void ell_3m_post_mul_d(double m[9], const double x[9]);
ELL_EXPORT float ell_3m_det_f(float m[9]);